--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,17 +56,17 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/btn_login"
         android:text="Login"
-        android:textAllCaps="false"
         android:layout_gravity="end"
-        android:layout_height="wrap_content"/>
+        android:layout_height="56dp"/>
     <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        app:icon="@drawable/ic_arrow_forward_black_24dp"
         android:text="Register"
         android:id="@+id/btn_register"
         android:layout_gravity="center"
-        android:layout_marginTop="36dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="56dp"/>
 </LinearLayout>
